// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cellInfoReducer Updates cell info state on focus action 1`] = `
{
  "focus": {
    "key": "GENE1",
    "store": "genes",
  },
  "groupedTrack": "louvain",
  "selectedTracks": [
    "louvain",
  ],
}
`;

exports[`cellInfoReducer Updates cell info state on unfocus action 1`] = `
{
  "focus": {
    "key": null,
    "store": null,
  },
  "groupedTrack": "louvain",
  "selectedTracks": [
    "louvain",
  ],
}
`;

exports[`cellInfoReducer Updates cell info state on update action 1`] = `
{
  "cellId": "C1",
  "focus": {
    "key": "louvain",
    "store": "cellSets",
  },
  "groupedTrack": "louvain",
  "selectedTracks": [
    "louvain",
  ],
}
`;
